--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>The Hayesfield Cat</title>
+  <script src="https://code.jquery.com/jquery-3.0.0.js"></script>	
 </head>
 <body>
 <svg height="600" width="600">
@@ -41,10 +42,9 @@
 <polygon fill="#512DA8" points="300,345 275,300 330,300" />
 <text x="250" y="550" fill="purple" font-family="Verdana" font-size="19">Hayesfield</text>
 <text x="280" y="570" fill="purple" font-family="Verdana" font-size="19">Cat</text>
+</svg>
 
-<script src="https://code.jquery.com/jquery-3.0.0.js"></script>
-</svg> 
-<script id="jsbin-javascript">
+<script id="Hayesfield-Cat">
 var BackgroundShape = $("#face");
 var isBackgroundBlue;
 isBackgroundBlue=true
